--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿        @{
-    ViewBag.Title = "Главная";
+    ViewBag.Title = "Головна";
 }
 
 <div class="jumbotron">
@@ -17,8 +17,8 @@
             <div class="item active">
                 <img src="/bg.jpg" />
                 <div class="carousel-caption">
-                    <h1>Система управления центром обучения и досуга</h1>
-                    <p class="lead">Добро пожаловать на главную страницу!</p>
+                    <h1>Система управління центром навчання і дозвілля</h1>
+                    <p class="lead">Ласкаво просимо на головну сторінку!</p>
                 </div>
             </div>
 
@@ -41,7 +41,7 @@
             <div class="form-horizontal" style="padding-left:10px; padding-bottom:5px; font-size:medium">
                 <h2 style="padding:7px">Журнал</h2>
                 <p>
-                    Здесь вы можете заполнить и просмотреть журнал посещения
+                    Тут ви можете заповнити та подивитися журлал відвідуваності 
                 </p>
                 <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
             </div>
@@ -51,7 +51,7 @@
             <div class="form-horizontal" style="padding-left:10px; padding-bottom:5px; font-size:medium; background-image:url(../../bd.jpg);  background-size: cover;">
                 @if ((ViewBag.TodayBirthdayStudents).Count != 0)
                 {
-                    <h3>Сегодня День рождения y:</h3>
+                    <h3>Сьогодні День народження у:</h3>
                     foreach (dancing_studio.DAL.Student s in ViewBag.TodayBirthdayStudents)
                     {
                         <p> @Html.ActionLink(s.Name, "Details", new { Controller = "Students", action = "Details", id = s.Id })</p>
@@ -59,7 +59,7 @@
                 }
                 @if ((ViewBag.NearestBirthDays).Count != 0)
                 {
-                    <h3>Скоро День рождения y:</h3>
+                    <h3>Скоро День народження y:</h3>
                     foreach (dancing_studio.DAL.Student s in ViewBag.NearestBirthDays)
                     {
                         <p>@s.Birthday.Value.Day.@s.Birthday.Value.Month - @Html.ActionLink(s.Name, "Details", new { Controller = "Students", action = "Details", id = s.Id })</p>
@@ -73,8 +73,8 @@
             <!--<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Перейти &raquo;</a></p>-->
         </div>
         @*<div class="col-md-4">
-                <h2>Расписание</h2>
-                <p>Здесь вы можете просматривать и изменять расписание занятий</p>
+                <h2>Розклад</h2>
+                <p>Тут ви можете переглядати та змінювати розклад заняття</p>
                 <p><a class="btn btn-default" href="#">Перейти &raquo;</a></p>
             </div>*@
     </div>
