--- a/dancing-studio/Views/Lessons/ChooseGroup.cshtml
+++ b/dancing-studio/Views/Lessons/ChooseGroup.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<dancing_studio.DAL.Group>
 
 @{
-    ViewBag.Title = "Выбор группы";
+    ViewBag.Title = "Выбір групи";
 }
 
-<h2>Выбор группы</h2>
+<h2>Вибір групи</h2>
 
 <table class="table">
     <tr>
