--- a/dancing-studio/Views/Lessons/Edit.cshtml
+++ b/dancing-studio/Views/Lessons/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model dancing_studio.DAL.Lesson
 
 @{
-    ViewBag.Title = "Изменение";
+    ViewBag.Title = "Зміна";
 }
 
-<h2>Изменение информации об уроке</h2>
+<h2>Зміна інформації про урок</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,7 @@
     
     <div class="form-horizontal">
         <hr />
-        <h4 style="padding-left: 20px; padding-bottom: 20px ">Группа: @ViewBag.GrName</h4>
+        <h4 style="padding-left: 20px; padding-bottom: 20px ">Група: @ViewBag.GrName</h4>
        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -44,7 +44,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
+                <input type="submit" value="Зберегти" class="btn btn-default" />
             </div>
         </div>
         <hr />
@@ -59,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Вернуться к журналу", "Index", new { id = ViewBag.gr })
+    @Html.ActionLink("Повернутися до журналу", "Index", new { id = ViewBag.gr })
 </div>
 
 @section Scripts {
