--- a/dancing-studio/Views/Lessons/EditPresents.cshtml
+++ b/dancing-studio/Views/Lessons/EditPresents.cshtml
@@ -1,10 +1,10 @@
 ﻿@model List<dancing_studio.DAL.Present>
 
 @{
-    ViewBag.Title = "Отсутствующие";
+    ViewBag.Title = "Відсутні";
 }
 
-<h2>Отсутствующие</h2>
+<h2>Відсутні</h2>
 
 
 @using (Html.BeginForm())
@@ -30,14 +30,14 @@
         }
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
+                <input type="submit" value="Зберегти" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Вернуться к журналу", "Index", new { id = ViewBag.gr })
+    @Html.ActionLink("Повернутися до журналу", "Index", new { id = ViewBag.gr })
 </div>
 
 @section Scripts {
