--- a/dancing-studio/Views/Payments/Create.cshtml
+++ b/dancing-studio/Views/Payments/Create.cshtml
@@ -35,9 +35,9 @@
                     @Html.DisplayFor(modelItem => item.Date.Value.Date.Day).@Html.DisplayFor(modelItem => item.Date.Value.Date.Month).@Html.DisplayFor(modelItem => item.Date.Value.Date.Year)
                 </td>
                 <td>
-                    <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
+                    <th>@Html.ActionLink("Змінити", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
                     @*@Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
-                    <th>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
+                    <th>@Html.ActionLink("Видалити", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
                 </td>
             </tr>
         }
@@ -96,7 +96,7 @@
 }
 
 <div>
-    @Html.ActionLink("Вернуться к списку учеников", "Index", new { Controller = "Students", action = "Index" })
+    @Html.ActionLink("Повернутися до списку учнів", "Index", new { Controller = "Students", action = "Index" })
 </div>
 
 @section Scripts {
