--- a/dancing-studio/Views/Plans/Index.cshtml
+++ b/dancing-studio/Views/Plans/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>*@
 
-<h2>Расписание</h2>
+<h2>Розклад</h2>
 
 
 
@@ -28,7 +28,7 @@
         <th>18:30-20:00</th>
         <th>20:00-21:30</th>
     </tr>
-    @{ string[] days = {"Понедельник", "Вторник", "Среда", "Четверг", "Пятница", "Суббота", "Воскресенье"};}
+    @{ string[] days = {"Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця", "Субота", "неділя"};}
     @for (int i = (int)Plan.DayOfWeek.Monday; i <= (int)Plan.DayOfWeek.Sunday; i++)
     {
         <tr>
