--- a/dancing-studio/Views/Shared/Error.cshtml
+++ b/dancing-studio/Views/Shared/Error.cshtml
@@ -7,12 +7,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>Ошибка</title>
+    <title>Помилка</title>
 </head>
 <body>
     <hgroup>
-        <h1>Ошибка.</h1>
-        <h2>При обработке запроса произошла ошибка.</h2>
+        <h1>Помилка.</h1>
+        <h2>При обробці запиту сталася помилка.</h2>
     </hgroup>
 </body>
 </html>
