--- a/dancing-studio/Views/Students/Create.cshtml
+++ b/dancing-studio/Views/Students/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Добавление";
+    ViewBag.Title = "Додавання";
 }
 
-<h2>Добавление ученика</h2>
+<h2>Додавання учня</h2>
 
 
 @using (Html.BeginForm()) 
@@ -68,7 +68,7 @@
 }
 
 <div>
-    @Html.ActionLink("Вернуться к списку", "Index")
+    @Html.ActionLink("Повернутися до списку", "Index")
 </div>
 
 @section Scripts {
