--- a/dancing-studio/Views/Students/Delete.cshtml
+++ b/dancing-studio/Views/Students/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Удаление";
+    ViewBag.Title = "Видалення";
 }
 
-<h2>Удаление ученика</h2>
+<h2>Відалення учня</h2>
 
-<h3>Вы уверены, что хотите удалить запись об ученике?</h3>
+<h3>Ви впевнені, що бажаєте видалити запис про учня?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -53,8 +53,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-default" /> |
-            @Html.ActionLink("Вернуться к списку", "Index")
+            <input type="submit" value="" class="btn btn-default" /> |
+            @Html.ActionLink("Повернутися до списку", "Index")
         </div>
     }
 </div>
