--- a/dancing-studio/Views/Students/Edit.cshtml
+++ b/dancing-studio/Views/Students/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model dancing_studio.DAL.Student
 
 @{
-    ViewBag.Title = "Изменение";
+    ViewBag.Title = "Зміна";
 }
 
-<h2>Изменить информацию</h2>
+<h2>Змінити информацію</h2>
 
 
 @using (Html.BeginForm())
@@ -62,7 +62,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
+                <input type="submit" value="Зберегти" class="btn btn-default" />
             </div>
         </div>
         <hr />
@@ -70,7 +70,7 @@
 }
 
 <div>
-    @Html.ActionLink("Вернуться к списку", "Index")
+    @Html.ActionLink("Повернутися до списку", "Index")
 </div>
 
 @section Scripts {
