--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<dancing_studio.DAL.Student>
 
 @{
-  ViewBag.Title = "Ученики";
+  ViewBag.Title = "Учні";
 }
 
 <h2>Ученики</h2>
 
 <p>
-    @Html.ActionLink("Добавить нового", "Create", null, new { @class = "adder" })
+    @Html.ActionLink("Додати нового", "Create", null, new { @class = "adder" })
 </p>
 <table class="table">
     <tr>
@@ -51,9 +51,9 @@
             </td>
             <td>
                 <th>@Html.ActionLink("Баланс", "Create", new { Controller = "Payments", action = "Create", id = item.Id }) </th>
-                <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
-                <th>@Html.ActionLink("Подробней", "Details", new { id = item.Id }, new { @class = "details" })</th>
-                <th>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
+                <th>@Html.ActionLink("Змінити", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
+                <th>@Html.ActionLink("Детальніше", "Details", new { id = item.Id }, new { @class = "details" })</th>
+                <th>@Html.ActionLink("Видалити", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
             </td>
         </tr>
     }
