--- a/dancing-studio/Views/Teachers/Create.cshtml
+++ b/dancing-studio/Views/Teachers/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model dancing_studio.DAL.Teacher
 
 @{
-    ViewBag.Title = "Добавление";
+    ViewBag.Title = "Додавання";
 }
 
-<h2>Добавление преподавателя</h2>
+<h2>Додавання викладача</h2>
 
 
 @using (Html.BeginForm()) 
@@ -59,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Вернуться к списку", "Index")
+    @Html.ActionLink("Повернутися до списку", "Index")
 </div>
 
 @section Scripts {
