--- a/dancing-studio/Views/Teachers/Delete.cshtml
+++ b/dancing-studio/Views/Teachers/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model dancing_studio.DAL.Teacher
 
 @{
-    ViewBag.Title = "Удаление";
+    ViewBag.Title = "Видалення";
 }
 
-<h2>Удаление</h2>
+<h2>Видалення</h2>
 
-<h3>Вы уверены, что хотите удалить преподавателя?</h3>
+<h3>Ви впевнені, що бажаєте видалити викладача?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -40,8 +40,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-default" /> |
-            @Html.ActionLink("Вернуться к списку", "Index")
+            <input type="submit" value="Видалити" class="btn btn-default" /> |
+            @Html.ActionLink("Повернутися до списку", "Index")
         </div>
     }
 </div>
