--- a/dancing-studio/Views/Groups/Delete.cshtml
+++ b/dancing-studio/Views/Groups/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model dancing_studio.DAL.Group
 
 @{
-    ViewBag.Title = "Удалить";
+    ViewBag.Title = "Видалити";
 }
 
-<h2>Удаление группы</h2>
+<h2>Видалення групи</h2>
 
-<h3>Выуверенны, что хотите удалить группу?</h3>
+<h3>Ви певненні, що бажаете видалити групу?</h3>
 <div>
     <dl class="dl-horizontal">
         <dt>
@@ -31,8 +31,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-default" /> |
-            @Html.ActionLink("Вернуться к списку", "Index")
+            <input type="submit" value="Видалити" class="btn btn-default" /> |
+            @Html.ActionLink("Повернутися до списку", "Index")
         </div>
     }
 </div>
