--- a/dancing-studio/Views/Groups/Details.cshtml
+++ b/dancing-studio/Views/Groups/Details.cshtml
@@ -1,17 +1,17 @@
 ﻿@model dancing_studio.DAL.Group
 
 @{
-    ViewBag.Title = "Подробней";
+    ViewBag.Title = "Детальніше";
 }
 
 <h2></h2>
 
 <div>
-    <h4>Информация о группе</h4>
+    <h4>Інформація про групу</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Teacher.Name) преподавателя
+            @Html.DisplayNameFor(model => model.Teacher.Name) викладача
         </dt>
 
         <dd>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Изменить", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Вернуться к списку", "Index")
+    @Html.ActionLink("Змінити", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Повернутися до списку", "Index")
 </p>
