--- a/dancing-studio/Views/Groups/Index.cshtml
+++ b/dancing-studio/Views/Groups/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<dancing_studio.DAL.Group>
 
 @{
-    ViewBag.Title = "Группы";
+    ViewBag.Title = "Групи";
 }
 
-<h2>Группы</h2>
+<h2>Групи</h2>
 
 <p>
-    @Html.ActionLink("Добавить новую", "Create", null, new { @class = "adder" })
+    @Html.ActionLink("Додати нову", "Create", null, new { @class = "adder" })
 </p>
 <table class="table">
     <tr>
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            ФИО преподавателя
+            ПІБ викладача
         </th>
         <th>
             <th width="30"></th>
@@ -35,9 +35,9 @@
                 @Html.DisplayFor(modelItem => item.Teacher.Name)
             </td>
             <td>
-            <th>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
-            <th>@Html.ActionLink("Подробней", "Details", new { id = item.Id }, new { @class = "details" })</th>
-            <th>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
+            <th>@Html.ActionLink("Змінити", "Edit", new { id = item.Id }, new { @class = "editer" })</th>
+            <th>@Html.ActionLink("Детальніше", "Details", new { id = item.Id }, new { @class = "details" })</th>
+            <th>@Html.ActionLink("Видалити", "Delete", new { id = item.Id }, new { @class = "delete" })</th>
             </td>
         </tr>
     }
