--- a/dancing-studio/Views/Lessons/Index.cshtml
+++ b/dancing-studio/Views/Lessons/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Журнал";
 }
 
-<h2>Журнал группы</h2>
+<h2>Журнал групи</h2>
 <h4>@ViewBag.GrName </h4>
 
 <p>
@@ -22,7 +22,7 @@
             </th>
         }
         <th>
-            @Html.ActionLink("Добавить урок", "Create", new { id = ViewBag.groupId })
+            @Html.ActionLink("Додати урок", "Create", new { id = ViewBag.groupId })
         </th>
     </tr>
     @if (Model.Count() != 0)
@@ -62,10 +62,10 @@
         @foreach (var item in Model.OrderBy(x => x.DateTime))
         {
             <td align="center">
-                <p>@Html.ActionLink("Отсутствующие", "EditPresents", new { id = item.Id })<br />
-                <p>@Html.ActionLink("Изменить", "Edit", new { id = item.Id }, new { @class = "editer" })
-                <p>@Html.ActionLink("Подробно", "Details", new { id = item.Id }, new { @class = "details" })
-                <p>@Html.ActionLink("Удалить", "Delete", new { id = item.Id }, new { @class = "delete" })
+                <p>@Html.ActionLink("Відсутні", "EditPresents", new { id = item.Id })<br />
+                <p>@Html.ActionLink("Змінити", "Edit", new { id = item.Id }, new { @class = "editer" })
+                <p>@Html.ActionLink("Детально", "Details", new { id = item.Id }, new { @class = "details" })
+                <p>@Html.ActionLink("Видалити", "Delete", new { id = item.Id }, new { @class = "delete" })
             </td>
         }
         <td></td>
