--- a/dancing-studio/Views/Shared/_Layout.cshtml
+++ b/dancing-studio/Views/Shared/_Layout.cshtml
@@ -27,13 +27,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <!--<li>@Html.ActionLink("О программе", "About", "Home")</li>
+                    <!--<li>@Html.ActionLink("Про програму", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>-->
-                    <li>@Html.ActionLink("Преподаватели", "Index", "Teachers")</li>
-                    <li>@Html.ActionLink("Ученики", "Index", "Students")</li>
-                    <li>@Html.ActionLink("Группы", "Index", "Groups")</li>
+                    <li>@Html.ActionLink("Викладачи", "Index", "Teachers")</li>
+                    <li>@Html.ActionLink("Учні", "Index", "Students")</li>
+                    <li>@Html.ActionLink("Групи", "Index", "Groups")</li>
                     <li>@Html.ActionLink("Журнал", "ChooseGroup", "Lessons")</li>
-                    <li>@Html.ActionLink("Рассписание", "Index", "Plans")</li>
+                    <li>@Html.ActionLink("Розклад", "Index", "Plans")</li>
                     <li><a href="~/help/index.htm">Справка</a></li>
                 </ul>
             </div>
@@ -43,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year – Александра Миронцева </p>
+            <p>&copy; @DateTime.Now.Year – Олександра Міронцева </p>
         </footer>
     </div>
 
@@ -51,10 +51,10 @@
 
     <!--стили jquery ui-->
     @Styles.Render("~/Content/themes/base/css")
-    <!--сама библиотека jquey ui-->
+    <!--сама бібліотека jquey ui-->
     @Scripts.Render("~/bundles/jqueryui")
     @RenderSection("scripts", required: false)
-    <!--если браузер не создает специального поля для date, то добавляем datepicker-->
+    <!--якщо браузер не сворюе спеціального поля для date, то додаемо datepicker-->
     @*<script type="text/javascript">
     $(function () {
         if (!Modernizr.inputtypes.date) {
@@ -64,17 +64,17 @@
                     .get(0).setAttribute("type", "text");
             });
             $.datepicker.regional['ru'] = {
-                closeText: 'Закрыть',
+                closeText: 'Закрити',
                 prevText: 'Пред',
-                nextText: 'След',
-                currentText: 'Сегодня',
-                monthNames: ['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь',
-                'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь'],
-                monthNamesShort: ['Янв', 'Фев', 'Мар', 'Апр', 'Май', 'Июн',
-                'Июл', 'Авг', 'Сен', 'Окт', 'Ноя', 'Дек'],
-                dayNames: ['воскресенье', 'понедельник', 'вторник', 'среда', 'четверг', 'пятница', 'суббота'],
-                dayNamesShort: ['вск', 'пнд', 'втр', 'срд', 'чтв', 'птн', 'сбт'],
-                dayNamesMin: ['Вс', 'Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб'],
+                nextText: 'Слід',
+                currentText: 'Сьогодні',
+                monthNames: ['Січень', 'Лютий', 'Березень', 'Квітень', 'Травень', 'Червень',
+                'Липень', 'Серпень', 'Вересень', 'Жовтень', 'Листопад', 'Грудень'],
+                monthNamesShort: ['Січ', 'Лют', 'Бер', 'Квіт', 'Трав', 'Черв',
+                'Лип', 'Серп', 'Вер', 'Жовт', 'Лист', 'Груд'],
+                dayNames: ['неділя', 'понеділок', 'вівторок', 'середа', 'четвер', 'п'ятниця', 'субота'],
+                dayNamesShort: ['ндл', 'пнд', 'ввтр', 'срд', 'чтв', 'птн', 'сбт'],
+                dayNamesMin: ['Нд', 'Пн', 'Вт', 'Ср', 'Чт', 'Пт', 'Сб'],
                 weekHeader: 'Не',
                 dateFormat: 'dd.mm.yy',
                 firstDay: 1,
