--- a/dancing-studio/Views/Groups/Delete.cshtml
+++ b/dancing-studio/Views/Groups/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Видалення групи</h2>
 
-<h3>Ви певненні, що бажаете видалити групу?</h3>
+<h3>Ви певненні, що бажаєте видалити групу?</h3>
 <div>
     <dl class="dl-horizontal">
         <dt>
