--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
             <div class="form-horizontal" style="padding-left:10px; padding-bottom:5px; font-size:medium">
                 <h2 style="padding:7px">Журнал</h2>
                 <p>
-                    Тут ви можете заповнити та подивитися журлал відвідуваності 
+                    Тут ви можете заповнити та подивитися журлал відвідування
                 </p>
                 <p><a class="btn btn-default" href=@Url.Action("ChooseGroup", "Lessons")>Перейти &raquo;</a></p>
             </div>
