--- a/dancing-studio/Views/Payments/Delete.cshtml
+++ b/dancing-studio/Views/Payments/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@Model.Student.Name</h2>
 
-<h3>Ви впевненні, що бажаете видалити цю оплату?</h3>
+<h3>Ви впевненні, що бажаєте видалити цю оплату?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
