--- a/dancing-studio/Views/Plans/Index.cshtml
+++ b/dancing-studio/Views/Plans/Index.cshtml
@@ -28,7 +28,7 @@
         <th>18:30-20:00</th>
         <th>20:00-21:30</th>
     </tr>
-    @{ string[] days = {"Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця", "Субота", "неділя"};}
+    @{ string[] days = {"Понеділок", "Вівторок", "Середа", "Четвер", "П'ятниця", "Субота", "Неділя"};}
     @for (int i = (int)Plan.DayOfWeek.Monday; i <= (int)Plan.DayOfWeek.Sunday; i++)
     {
         <tr>
