--- a/dancing-studio/Views/Students/Index.cshtml
+++ b/dancing-studio/Views/Students/Index.cshtml
@@ -4,7 +4,7 @@
   ViewBag.Title = "Учні";
 }
 
-<h2>Ученики</h2>
+<h2>Учні</h2>
 
 <p>
     @Html.ActionLink("Додати нового", "Create", null, new { @class = "adder" })
