--- a/dancing-studio/Views/Lessons/Delete.cshtml
+++ b/dancing-studio/Views/Lessons/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Видалення уроку</h2>
 
-<h3>Ви впевненні, що бажаете видалети урок?</h3>
+<h3>Ви впевненні, що бажаєте видалети урок?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
