--- a/dancing-studio/Views/Shared/_Layout.cshtml
+++ b/dancing-studio/Views/Shared/_Layout.cshtml
@@ -23,18 +23,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Главная", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Головна", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <!--<li>@Html.ActionLink("Про програму", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>-->
-                    <li>@Html.ActionLink("Викладачи", "Index", "Teachers")</li>
+                    <li>@Html.ActionLink("Викладачі", "Index", "Teachers")</li>
                     <li>@Html.ActionLink("Учні", "Index", "Students")</li>
                     <li>@Html.ActionLink("Групи", "Index", "Groups")</li>
                     <li>@Html.ActionLink("Журнал", "ChooseGroup", "Lessons")</li>
                     <li>@Html.ActionLink("Розклад", "Index", "Plans")</li>
-                    <li><a href="~/help/index.htm">Справка</a></li>
+                    <li><a href="~/help/index.htm">Довідка</a></li>
                 </ul>
             </div>
         </div>
