--- a/dancing-studio/Views/Home/Index.cshtml
+++ b/dancing-studio/Views/Home/Index.cshtml
@@ -11,13 +11,12 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
-
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="/bg.jpg" />
                 <div class="carousel-caption">
-                    <h1>Система управління центром навчання і дозвілля</h1>
+                    <h1>Система керування танцювальною студією</h1>
                     <p class="lead">Ласкаво просимо на головну сторінку!</p>
                 </div>
             </div>
