--- a/dancing-studio/Views/Payments/Create.cshtml
+++ b/dancing-studio/Views/Payments/Create.cshtml
@@ -79,10 +79,16 @@
 
 
         <div class="form-group" style="display:none">
-            @Html.LabelFor(model => model.StudentId, "StudentId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StudentId, 
+                                    "StudentId", 
+                                    htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("StudentId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.StudentId, "", new { @class = "text-danger" })
+                @Html.DropDownList("StudentId", 
+                                    null, 
+                                    htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StudentId, 
+                                                    "", 
+                                                    new { @class = "text-danger" })
             </div>
         </div>
 
